--- a/res/layout/anime_detail_fragment.xml
+++ b/res/layout/anime_detail_fragment.xml
@@ -1,45 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 
-    <RelativeLayout
+    <TextView
+        android:id="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:text="Large Text"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:text="Large Text"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/title" >
 
-        <ImageView
-            android:id="@+id/cover_image"
-            android:layout_width="126dp"
-            android:layout_height="192dp"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/title"
-            android:scaleType="centerCrop"
-            android:src="@drawable/icon" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/synopsis"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignTop="@+id/cover_image"
-            android:layout_toRightOf="@+id/cover_image"
-            android:layout_alignBottom="@+id/cover_image"
-            android:gravity="top|left"
-            android:text="Medium Text"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-        
+            <TextView
+                android:id="@+id/synopsis"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/cover_image"
+                android:layout_alignTop="@+id/cover_image"
+                android:layout_toRightOf="@+id/cover_image" />
 
-    </RelativeLayout>
+            <ImageView
+                android:id="@+id/cover_image"
+                android:layout_width="197dp"
+                android:layout_height="300dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/icon" />
 
-</ScrollView>
+            <GridLayout 
+                android:layout_below="@+id/cover_image"
+                android:layout_width="match_parent" 
+                android:layout_height="wrap_content"
+                android:columnCount="2"
+                >
+                
+                <include layout="@layout/anime_detail_my_info"
+                    android:layout_row="0"
+                    android:layout_column="0"/>
+                
+            </GridLayout>
+        </RelativeLayout>
+    </ScrollView>
+
+</RelativeLayout>
