--- a/res/layout/anime_item.xml
+++ b/res/layout/anime_item.xml
@@ -1,36 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/list_item_height"
-    android:padding="@dimen/list_item_padding" >
+    android:layout_width="@dimen/item_bounds"
+    android:layout_height="@dimen/item_bounds"
+    android:background="@color/blue_even_item" >
 
     <ImageView
         android:id="@+id/thumb_image"
-        android:layout_width="@dimen/list_item_thumb_width"
-        android:layout_height="@dimen/list_item_thumb_height"
+        android:layout_width="@dimen/item_bounds"
+        android:layout_height="@dimen/item_bounds"
         android:layout_alignParentLeft="true"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:src="@drawable/icon" />
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/thumb_image"
-        android:layout_toRightOf="@+id/thumb_image"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:background="#A8000000"
         android:ellipsize="end"
         android:maxLines="2"
-        android:textSize="@dimen/large_text" />
+        android:text="title"
+        android:textColor="#FFF"
+        android:textSize="@dimen/medium_text" />
 
     <TextView
         android:id="@+id/suplimentary_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/thumb_image"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:ellipsize="end"
+        android:layout_alignParentLeft="true"
+        android:background="#A8000000"
         android:gravity="right"
-        android:maxLines="1"
-        android:textSize="@dimen/medium_text" />
+        android:maxLines="2"
+        android:text="supplementary\ntext"
+        android:textColor="#FFF"
+        android:textSize="@dimen/small_text" />
 
 </RelativeLayout>
