--- a/res/layout/anime_detail_fragment.xml
+++ b/res/layout/anime_detail_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
@@ -24,14 +25,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
-            <TextView
-                android:id="@+id/synopsis"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/cover_image"
-                android:layout_alignTop="@+id/cover_image"
-                android:layout_toRightOf="@+id/cover_image" />
-
             <ImageView
                 android:id="@+id/cover_image"
                 android:layout_width="197dp"
@@ -41,18 +34,101 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/icon" />
 
-            <GridLayout 
-                android:layout_below="@+id/cover_image"
-                android:layout_width="match_parent" 
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:columnCount="2"
-                >
-                
-                <include layout="@layout/anime_detail_my_info"
-                    android:layout_row="0"
-                    android:layout_column="0"/>
-                
-            </GridLayout>
+                android:layout_alignParentRight="true"
+                android:layout_toRightOf="@+id/cover_image"
+                android:orientation="vertical" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="My Info"
+                    android:textSize="@dimen/medium_text" />
+
+                <include layout="@layout/horizontal_divider" />
+
+                <TableLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:stretchColumns="1" >
+
+                    <TableRow>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical|left"
+                            android:text="Watched:"
+                            android:textStyle="bold" />
+
+                        <com.github.riotopsys.malforandroid2.view.NumberPicker
+                            android:id="@+id/watched_count"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center" />
+                    </TableRow>
+
+                    <TableRow>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical|left"
+                            android:text="Status:"
+                            android:textStyle="bold" />
+
+                        <Spinner
+                            android:id="@+id/anime_watched_status"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:spinnerMode="dialog"
+                            tools:listitem="@android:layout/simple_spinner_dropdown_item" />
+                    </TableRow>
+
+                    <TableRow>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical|left"
+                            android:text="Your Score:"
+                            android:textStyle="bold" />
+
+                        <Spinner
+                            android:id="@+id/anime_score_status"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:spinnerMode="dialog"
+                            tools:listitem="@android:layout/simple_spinner_dropdown_item" />
+                    </TableRow>
+                </TableLayout>
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/synopsis"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/cover_image" />
+
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/cover_image"
+                android:stretchColumns="0,1" >
+
+                <TableRow>
+
+                    <View
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        android:layout_marginLeft="5dp" />
+                </TableRow>
+            </TableLayout>
         </RelativeLayout>
     </ScrollView>
 
