--- a/res/layout/number_picker.xml
+++ b/res/layout/number_picker.xml
@@ -4,29 +4,29 @@
     android:layout_height="wrap_content" >
 
     <Button
-        android:id="@+id/negative_button"
+        android:id="@+id/positive_button"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/readout"
-        android:text="@string/minus" />
+        android:text="@string/plus" />
 
     <Button
-        android:id="@+id/positive_button"
+        android:id="@+id/negative_button"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:text="@string/plus" />
+        android:text="@string/minus" />
 
     <TextView
         android:id="@+id/readout"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/positive_button"
+        android:layout_toRightOf="@+id/negative_button"
         android:gravity="center"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
