--- a/project/res/drawable/rounded_item.xml
+++ b/project/res/drawable/rounded_item.xml
@@ -2,12 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <corners android:radius="40dp" />
+    <corners android:radius="20dp" />
 
-    <stroke
+    <!-- <stroke
         android:width="4dp"
-        android:color="#000" />
+        android:color="@color/black" />
+     -->
+    <solid android:color="@color/white"/>
     
-    <solid android:color="#FFF"/>
-
 </shape>
