--- a/project/res/layout/anime_detail_fragment.xml
+++ b/project/res/layout/anime_detail_fragment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res/com.github.riotopsys.malforandroid2"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
@@ -21,115 +22,105 @@
         android:layout_alignParentBottom="true"
         android:layout_below="@+id/title" >
 
-        <RelativeLayout
+        <com.github.riotopsys.pannellayout.PannelLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:background="@color/black"
+            android:padding="4dp"
+            app:columns="6"
+            app:divider_size="4dp" >
 
             <ImageView
                 android:id="@+id/cover_image"
-                android:layout_width="197dp"
-                android:layout_height="300dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/black"
                 android:scaleType="centerCrop"
-                android:src="@drawable/icon" />
+                android:src="@drawable/icon"
+                app:column_span="1"
+                app:row_span="4" />
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:padding="4dp"
+                app:column_span="3"
+                app:row_span="4" >
+
+                <TextView
+                    android:id="@+id/synopsis"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ipsum" />
+            </ScrollView>
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_toRightOf="@+id/cover_image"
-                android:orientation="vertical" >
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:orientation="vertical" 
+                app:column_span="1"
+                app:row_span="1">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="My Info"
-                    android:textSize="@dimen/medium_text" />
+                    android:layout_gravity="center_vertical|left"
+                    android:text="Watched:"
+                    android:textStyle="bold" />
 
-                <include layout="@layout/horizontal_divider" />
-
-                <TableLayout
+                <com.github.riotopsys.malforandroid2.view.NumberPicker
+                    android:id="@+id/watched_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:stretchColumns="1" >
-
-                    <TableRow>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical|left"
-                            android:text="Watched:"
-                            android:textStyle="bold" />
-
-                        <com.github.riotopsys.malforandroid2.view.NumberPicker
-                            android:id="@+id/watched_count"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center" />
-                    </TableRow>
-
-                    <TableRow>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical|left"
-                            android:text="Status:"
-                            android:textStyle="bold" />
-
-                        <Spinner
-                            android:id="@+id/anime_watched_status"
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:spinnerMode="dialog"
-                            tools:listitem="@android:layout/simple_spinner_dropdown_item" />
-                    </TableRow>
-
-                    <TableRow>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical|left"
-                            android:text="Your Score:"
-                            android:textStyle="bold" />
-
-                        <Spinner
-                            android:id="@+id/anime_score_status"
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:spinnerMode="dialog"
-                            tools:listitem="@android:layout/simple_spinner_dropdown_item" />
-                    </TableRow>
-                </TableLayout>
+                    android:layout_gravity="center" />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/synopsis"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_below="@+id/cover_image" />
-
-            <TableLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/cover_image"
-                android:stretchColumns="0,1" >
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                app:column_span="1" >
 
-                <TableRow>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|left"
+                    android:text="Status:"
+                    android:textStyle="bold" />
 
-                    <View
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
-                        android:layout_marginLeft="5dp" />
-                </TableRow>
-            </TableLayout>
-        </RelativeLayout>
+                <Spinner
+                    android:id="@+id/anime_watched_status"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:spinnerMode="dialog"
+                    tools:listitem="@android:layout/simple_spinner_dropdown_item" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                app:column_span="1" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|left"
+                    android:text="Your Score:"
+                    android:textStyle="bold" />
+
+                <Spinner
+                    android:id="@+id/anime_score_status"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:spinnerMode="dialog"
+                    tools:listitem="@android:layout/simple_spinner_dropdown_item" />
+            </LinearLayout>
+        </com.github.riotopsys.pannellayout.PannelLayout>
     </ScrollView>
 
 </RelativeLayout>
