--- a/project/res/values/colors.xml
+++ b/project/res/values/colors.xml
@@ -2,5 +2,7 @@
 <resources>
     <color name="blue_even_item">#FFE3F4FC</color>
     <color name="blue_odd_item">#FFC7EAFA</color> 
-    <color name="clear">#00000000</color> 
+    <color name="clear">#00000000</color>
+    <color name="black">#F000</color> 
+    <color name="white">#FFFF</color> 
 </resources>
