adding watched episode picker

--- a/project/res/layout/anime_detail_fragment.xml
+++ b/project/res/layout/anime_detail_fragment.xml
@@ -68,6 +68,7 @@
             </ScrollView>
 
             <LinearLayout
+                android:id="@+id/watched_pannel"
                 style="@style/detail_item"
                 android:gravity="center"
                 app:column_span="1" >
