fixing scrollview in scrollview issues

--- a/project/res/layout/anime_detail_fragment.xml
+++ b/project/res/layout/anime_detail_fragment.xml
@@ -57,6 +57,7 @@
 
             <ScrollView
                 style="@style/detail_item"
+                android:id="@+id/synopsis_container"
                 app:column_span="3"
                 app:row_span="4" >
 
