--- a/project/res/layout/main.xml
+++ b/project/res/layout/main.xml
@@ -21,11 +21,21 @@
     android:baselineAligned="false"
     >
 
-    <FrameLayout
+    <!-- <FrameLayout
         android:id="@+id/list_frame"
         android:layout_width="@dimen/left_hand_list_width"
         android:layout_height="match_parent" >
-    </FrameLayout>
+    </FrameLayout> -->
+    
+    <android.support.v4.view.ViewPager
+        android:id="@+id/list_pager"
+        android:layout_width="@dimen/left_hand_list_width"
+        android:layout_height="match_parent">
+        <android.support.v4.view.PagerTabStrip
+            android:layout_width="match_parent"
+        	android:layout_height="wrap_content"/>
+        
+    </android.support.v4.view.ViewPager>
     
     <FrameLayout
         android:id="@+id/detail_frame"
