--- a/project/res/layout/anime_detail_fragment.xml
+++ b/project/res/layout/anime_detail_fragment.xml
@@ -28,9 +28,7 @@
         android:layout_alignParentTop="true"
         android:ellipsize="end"
         android:maxLines="2"
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge" 
-        />
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -70,9 +68,10 @@
             </ScrollView>
 
             <LinearLayout
-                android:id="@+id/watched_pannel"
+                android:id="@+id/watched_panel"
                 style="@style/detail_item"
                 android:gravity="center"
+                android:visibility="gone"
                 app:column_span="1" >
 
                 <TextView
@@ -92,7 +91,9 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/status_panel"
                 style="@style/detail_item"
+                android:visibility="gone"
                 app:column_span="1" >
 
                 <TextView
@@ -112,7 +113,9 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/score_panel"
                 style="@style/detail_item"
+                android:visibility="gone"
                 app:column_span="1" >
 
                 <TextView
@@ -132,115 +135,103 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/information_container"
                 style="@style/detail_item"
-                android:text="alternative_versions"
+                android:orientation="vertical"
+                android:visibility="gone"
                 app:column_span="1"
-                app:row_span="2"
-                android:orientation="vertical" 
-                >
-                
+                app:row_span="2" >
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|left"
-                    android:text="Information"
-                    android:textStyle="bold" 
                     android:layout_marginBottom="4dp"
-                    />
-                
+                    android:text="Information"
+                    android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/type"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|left"
-                    android:text="Type: TV"
                     android:layout_marginBottom="4dp"
-                    />
-                
+                    android:text="Type: TV" />
+
                 <TextView
                     android:id="@+id/status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|left"
-                    android:text="Status: finished airing"
                     android:layout_marginBottom="4dp"
-                    />
-                
+                    android:text="Status: finished airing" />
+
                 <TextView
                     android:id="@+id/classification"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|left"
-                    android:text="classification: R - 17+ (violence &amp; profanity)"
                     android:layout_marginBottom="4dp"
-                    />
-                
-             </LinearLayout>
-             
+                    android:text="classification: R - 17+ (violence &amp; profanity)" />
+            </LinearLayout>
+
             <LinearLayout
+                android:id="@+id/statistics_container"
                 style="@style/detail_item"
-                android:text="alternative_versions"
+                android:orientation="vertical"
+                android:visibility="gone"
                 app:column_span="1"
-                app:row_span="2"
-                android:orientation="vertical" 
-                >
-                
+                app:row_span="2" >
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|left"
-                    android:text="Statistics"
-                    android:textStyle="bold" 
                     android:layout_marginBottom="4dp"
-                    />
-                
+                    android:text="Statistics"
+                    android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/rank"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|left"
-                    android:text="Rank: 3733"
                     android:layout_marginBottom="4dp"
-                    />
-                
+                    android:text="Rank: 3733" />
+
                 <TextView
                     android:id="@+id/popularity"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|left"
-                    android:text="Popularity: 3733"
                     android:layout_marginBottom="4dp"
-                    />
-                
+                    android:text="Popularity: 3733" />
+
                 <TextView
                     android:id="@+id/member_score"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|left"
-                    android:text="Member Score: 6.78"
                     android:layout_marginBottom="4dp"
-                    />
-                
+                    android:text="Member Score: 6.78" />
+
                 <TextView
                     android:id="@+id/member_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|left"
-                    android:text="Member Count: 52423"
                     android:layout_marginBottom="4dp"
-                    />
-                
+                    android:text="Member Count: 52423" />
+
                 <TextView
                     android:id="@+id/favorited_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|left"
-                    android:text="Favorited Count: 244"
                     android:layout_marginBottom="4dp"
-                    />
-                
-             </LinearLayout>
-             
+                    android:text="Favorited Count: 244" />
+            </LinearLayout>
+
             <TextView
                 android:id="@+id/prequel"
                 style="@style/detail_item"
@@ -267,7 +258,7 @@
                 android:textStyle="bold"
                 android:visibility="gone"
                 app:column_span="1" />
-            
+
             <TextView
                 android:id="@+id/spin_offs"
                 style="@style/detail_item"
@@ -276,7 +267,7 @@
                 android:textStyle="bold"
                 android:visibility="gone"
                 app:column_span="1" />
-            
+
             <TextView
                 android:id="@+id/summaries"
                 style="@style/detail_item"
@@ -285,7 +276,7 @@
                 android:textStyle="bold"
                 android:visibility="gone"
                 app:column_span="1" />
-            
+
             <TextView
                 android:id="@+id/alternative_versions"
                 style="@style/detail_item"
@@ -294,7 +285,6 @@
                 android:textStyle="bold"
                 android:visibility="gone"
                 app:column_span="1" />
-            
         </com.github.riotopsys.pannellayout.PannelLayout>
     </ScrollView>
 
