--- a/project/res/menu/base.xml
+++ b/project/res/menu/base.xml
@@ -15,7 +15,7 @@
  limitations under the License. 
 --> 
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:id="@+id/refresh_menu_item" android:showAsAction="never" android:title="Refresh List"></item>
+    <item android:id="@+id/refresh_menu_item" android:showAsAction="never" android:title="@string/refresh_list"></item>
     
 
 </menu>
