--- a/project/res/menu/base.xml
+++ b/project/res/menu/base.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 
+<!--
  Copyright 2013 C. A. Fitzgerald
 
  Licensed under the Apache License, Version 2.0 (the "License");
@@ -13,9 +13,19 @@
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License. 
---> 
+-->
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:id="@+id/refresh_menu_item" android:showAsAction="never" android:title="@string/refresh_list"></item>
+
+    <item
+        android:icon="@drawable/ic_menu_refresh"
+        android:id="@+id/refresh_menu_item"
+        android:showAsAction="ifRoom"
+        android:title="@string/refresh_list"/>
     
+    <item android:id="@+id/menu_search"
+          android:title="@string/search"
+          android:icon="@drawable/ic_menu_search"
+          android:showAsAction="ifRoom|collapseActionView"
+          android:actionViewClass="android.widget.SearchView"/>
 
 </menu>
